deactivated focus on mobile, repaired bad merge of HTML file

--- a/components/footer/footer.less
+++ b/components/footer/footer.less
@@ -171,6 +171,9 @@ footer.navbar.default-footer {
                     padding:0;
                     a {
                         padding: 10px 0;
+                        &:focus {
+                            outline: none;
+                        }
                     }
                 }
             }
